# glotov

./: .gitignore  README.md  pyproject.toml
api_app/: urls.py
auth_app/: admin.py  models.py  serializers.py  services.py  tests.py  transport.py  urls.py  views.py
auth_app/migrations/: 0001_initial.py  0002_alter_user_password.py  0003_alter_user_password.py
cart_app/: admin.py  apps.py  models.py  schemas.py  serializers.py  services.py  tests.py  urls.py  views.py
cart_app/migrations/: 0001_initial.py  0002_rename_qnt_cartitem_quantity.py
cart_app/templates/cart_app/: message.html
catalog_app/: admin.py  commons.py  models.py  serializers.py  tests.py  urls.py  views.py
catalog_app/migrations/: 0001_initial.py  0002_auto_20240926_1445.py
catalog_app/services/: good.py  manufacturer.py
image_app/: admin.py
image_app/migrations/: 0001_initial.py
server/: base.py  settings.py  urls.py
